# weather-station

./: .gitignore  Cargo.toml  Dockerfile  compose.yaml
config/: app_config.toml
current-weather/: Cargo.toml
current-weather/src/: config.rs  lib.rs  main.rs  metrics.rs
http-client/: Cargo.toml
http-client/src/: config.rs  error.rs  lib.rs  metrics.rs
http-client/tests/: http_int_tests.rs
influx/: Cargo.toml
influx/src/: client.rs  config.rs  error.rs  lib.rs
influx/src/model/: current.rs
influx/tests/: current_weather.rs
model/src/http/: current.rs  forecast.rs  mod.rs
weather-forecast/: Cargo.toml
