[workspace]

members = ["current-weather", "http-client", "influx", "model", "weather-forecast"] 

resolver = "3"

[workspace.dependencies]
log = "0.4"
env_logger = "0.11"
thiserror = "2.0"
tokio = { version = "1", features = ["full"] }
twelf = {  version = "0.15", features = ["toml", "env", "envy"] }
reqwest = { version = "0.13", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.149"
