[workspace]

members = ["current-weather", "http-client", "influx", "model", "weather-forecast"] 

resolver = "3"

[workspace.dependencies]
log = "0.4"
env_logger = "0.11"
thiserror = "2.0"
chrono = "0.4"
chrono-tz = "0.10.4"
tokio = { version = "1", features = ["full"] }
twelf = {  version = "0.15", features = ["toml", "env", "envy"] }
reqwest = { version = "0.13", default-features = false, features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.149"
prometheus = "0.14.0"
lazy_static = "1.5.0"
axum = "0.8"
once_cell = "1.21.3"