[package]
name = "current-weather"
version = "0.1.0"
edition = "2024"

[dependencies]
env_logger = { workspace = true }
twelf = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true }
influx = { path = "../influx" }
http-client = { path = "../http-client" }
model = { path = "../model" }
