[package]
name = "current-weather"
version = "0.1.0"
edition = "2024"

[dependencies]
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
twelf = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true }
axum = { workspace = true }
prometheus = { workspace = true }
once_cell = { workspace = true }
influx = { path = "../influx" }
http-client = { path = "../http-client" }
model = { path = "../model" }
uuid = { version = "1.21.0", features = ["v4"] }
sysinfo = "0.30"
