[package]
name = "http-client"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
url = "2.5.8"
strum_macros = "0.28"
log = { workspace = true }
async-trait = "0.1.89"

[dev-dependencies]
tokio = { version = "1", features = ["full"]}
wiremock = "0.6"