[package]
name = "http-client"
version = "0.1.0"
edition = "2024"

[dependencies]
log = { workspace = true }
reqwest = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
prometheus = { workspace = true }
once_cell = { workspace = true }
url = "2.5.8"
strum_macros = "0.28"
async-trait = "0.1.89"

[dev-dependencies]
tokio = { version = "1", features = ["full"]}
wiremock = "0.6"